Practica_final/parser.output
Terminals unused in grammar

    BT_CERO
    BT_DOSCIENTOSCINCUENTAYCINCO


State 39 conflicts: 1 shift/reduce


Grammar

    0 $accept: descAlgoritmo $end

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    2 cabeceraAlgoritmo: defGlobales defAccionesFunciones defVariablesInteraccion BT_COMENTARIO

    3 bloqueAlgoritmo: bloque BT_COMENTARIO

    4 defGlobales: definicionTipo defGlobales
    5            | definicionConst defGlobales
    6            | %empty

    7 defAccionesFunciones: defAccion defAccionesFunciones
    8                     | defFuncion defAccionesFunciones
    9                     | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: definicionTipo declaraciones
   12              | definicionConst declaraciones
   13              | definicionVar declaraciones
   14              | %empty

   15 definicionTipo: BT_TIPO listaDefsTipo BT_FTIPO

   16 definicionConst: BT_CONST listaDefsConstantes BT_FCONST

   17 definicionVar: BT_VAR listaDefsVariables BT_FVAR

   18 listaDefsTipo: BT_IDENTIFICADOR BT_CREACIONTIPO defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo
   19              | %empty

   20 defTipo: BT_TUPLA listaCampos BT_FTUPLA
   21        | BT_TABLA BT_INICIOARRAY expresionT BT_SUBRANGO expresionT BT_FINARRAY BT_DE defTipo
   22        | BT_IDENTIFICADOR
   23        | expresionT BT_SUBRANGO expresionT
   24        | BT_REF defTipo
   25        | BT_TIPOBASE

   26 expresionT: BT_LITERALENTERO
   27           | BT_LITERALCARACTER

   28 listaCampos: BT_IDENTIFICADOR BT_ASIGNACION defTipo BT_COMPOSICIONSECUENCIAL listaCampos
   29            | %empty

   30 listaDefsConstantes: BT_IDENTIFICADOR BT_ASIGNACION BT_LITERAL BT_COMPOSICIONSECUENCIAL listaDefsConstantes
   31                    | %empty

   32 listaDefsVariables: listaId BT_DEFINICIONTIPOVARIABLE defTipo BT_COMPOSICIONSECUENCIAL listaDefsVariables
   33                   | %empty

   34 listaId: BT_IDENTIFICADOR BT_SEPARADOR listaId
   35        | BT_IDENTIFICADOR

   36 defVariablesInteraccion: defEntrada
   37                        | defEntrada defSalida
   38                        | defSalida

   39 defEntrada: BT_ENT listaDefsVariables

   40 defSalida: BT_SAL listaDefsVariables

   41 expresion: llamadaFuncion
   42          | operando
   43          | expresion BT_SUMA expresion
   44          | expresion BT_RESTA expresion
   45          | expresion BT_MULTIPLICACION expresion
   46          | expresion BT_DIVREAL expresion
   47          | expresion BT_DIV expresion
   48          | expresion BT_MOD expresion
   49          | BT_INICIOPARENTESIS expresion BT_FINPARENTESIS
   50          | BT_RESTA expresion
   51          | BT_LITERALNUMERICO
   52          | expresion BT_Y expresion
   53          | expresion BT_O expresion
   54          | BT_NO expresion
   55          | BT_VERDADERO
   56          | BT_FALSO
   57          | expresion BT_MAYOR expresion
   58          | expresion BT_MENOR expresion
   59          | expresion BT_IGUAL expresion
   60          | expresion BT_DISTINTO expresion
   61          | expresion BT_MAYORIGUAL expresion
   62          | expresion BT_MENORIGUAL expresion

   63 operando: BT_IDENTIFICADOR
   64         | operando BT_PUNTO operando
   65         | operando BT_INICIOARRAY expresion BT_FINARRAY
   66         | operando BT_REF

   67 instrucciones: instruccion BT_COMPOSICIONSECUENCIAL instrucciones
   68              | instruccion

   69 instruccion: BT_CONTINUAR
   70            | asignacion
   71            | alternativa
   72            | iteracion
   73            | llamadaAccion

   74 asignacion: operando BT_ASIGNACION expresion

   75 alternativa: BT_SI expresion BT_ENTONCES instrucciones listaOpciones BT_FSI

   76 listaOpciones: BT_SINOSI expresion BT_ENTONCES instrucciones listaOpciones
   77              | %empty

   78 iteracion: itCotaFija
   79          | itCotaVariable

   80 itCotaVariable: BT_MIENTRAS expresion BT_HACER instrucciones BT_FMIENTRAS

   81 itCotaFija: BT_PARA BT_IDENTIFICADOR BT_ASIGNACION expresion BT_HASTA expresion BT_HACER instrucciones BT_FPARA

   82 defAccion: BT_ACCION cabeceraAccion bloque BT_FACCION

   83 defFuncion: BT_FUNCION cabeceraFuncion bloque BT_DEV expresion BT_FFUNCION

   84 cabeceraAccion: BT_IDENTIFICADOR BT_INICIOPARENTESIS defParForm BT_FINPARENTESIS BT_COMPOSICIONSECUENCIAL

   85 cabeceraFuncion: BT_IDENTIFICADOR BT_INICIOPARENTESIS listaDefsVariables BT_FINPARENTESIS BT_DEV defTipo

   86 defParForm: dParForm BT_COMPOSICIONSECUENCIAL defParForm
   87           | dParForm
   88           | %empty

   89 dParForm: BT_ENT listaId BT_DEFINICIONTIPOVARIABLE defTipo
   90         | BT_SAL listaId BT_DEFINICIONTIPOVARIABLE defTipo
   91         | BT_ENTSAL listaId BT_DEFINICIONTIPOVARIABLE defTipo

   92 llamadaAccion: BT_IDENTIFICADOR BT_ASIGNACION BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

   93 llamadaFuncion: BT_IDENTIFICADOR BT_ASIGNACION BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

   94 parametrosReales: expresion BT_SEPARADOR parametrosReales
   95                 | expresion
   96                 | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BT_ALGORITMO (258) 1
    BT_FALGORITMO (259) 1
    BT_IDENTIFICADOR (260) 1 18 22 28 30 34 35 63 81 84 85 92 93
    BT_COMENTARIO (261) 2 3
    BT_TIPO (262) 15
    BT_FTIPO (263) 15
    BT_CONST (264) 16
    BT_FCONST (265) 16
    BT_VAR (266) 17
    BT_FVAR (267) 17
    BT_TUPLA (268) 20
    BT_FTUPLA (269) 20
    BT_TABLA (270) 21
    BT_DE (271) 21
    BT_DEV (272) 83 85
    BT_REF (273) 24 66
    BT_TIPOBASE (274) 25
    BT_LITERALENTERO (275) 26
    BT_LITERALCARACTER (276) 27
    BT_VERDADERO (277) 55
    BT_FALSO (278) 56
    BT_LITERAL (279) 30
    BT_ENT (280) 39 89
    BT_SAL (281) 40 90
    BT_ENTSAL (282) 91
    BT_LITERALNUMERICO (283) 51
    BT_Y (284) 52
    BT_O (285) 53
    BT_NO (286) 54
    BT_CONTINUAR (287) 69
    BT_SI (288) 75
    BT_FSI (289) 75
    BT_MIENTRAS (290) 80
    BT_FMIENTRAS (291) 80
    BT_HACER (292) 80 81
    BT_PARA (293) 81
    BT_FPARA (294) 81
    BT_HASTA (295) 81
    BT_ACCION (296) 82
    BT_FACCION (297) 82
    BT_FUNCION (298) 83
    BT_FFUNCION (299) 83
    BT_CERO (300)
    BT_DOSCIENTOSCINCUENTAYCINCO (301)
    BT_PUNTO (302) 64
    BT_SUMA (303) 43
    BT_RESTA (304) 44 50
    BT_DIV (305) 47
    BT_MOD (306) 48
    BT_DIVREAL (307) 46
    BT_MULTIPLICACION (308) 45
    BT_INICIOPARENTESIS (309) 49 84 85 92 93
    BT_FINPARENTESIS (310) 49 84 85 92 93
    BT_ASIGNACION (311) 28 30 74 81 92 93
    BT_COMPOSICIONSECUENCIAL (312) 1 18 28 30 32 67 84 86
    BT_DEFINICIONTIPOVARIABLE (313) 32 89 90 91
    BT_ENTONCES (314) 75 76
    BT_INICIOARRAY (315) 21 65
    BT_FINARRAY (316) 21 65
    BT_CREACIONTIPO (317) 18
    BT_SEPARADOR (318) 34 94
    BT_SUBRANGO (319) 21 23
    BT_MAYOR (320) 57
    BT_MENOR (321) 58
    BT_IGUAL (322) 59
    BT_DISTINTO (323) 60
    BT_MAYORIGUAL (324) 61
    BT_MENORIGUAL (325) 62
    BT_SINOSI (326) 76


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    descAlgoritmo (73)
        on left: 1
        on right: 0
    cabeceraAlgoritmo (74)
        on left: 2
        on right: 1
    bloqueAlgoritmo (75)
        on left: 3
        on right: 1
    defGlobales (76)
        on left: 4 5 6
        on right: 2 4 5
    defAccionesFunciones (77)
        on left: 7 8 9
        on right: 2 7 8
    bloque (78)
        on left: 10
        on right: 3 82 83
    declaraciones (79)
        on left: 11 12 13 14
        on right: 10 11 12 13
    definicionTipo (80)
        on left: 15
        on right: 4 11
    definicionConst (81)
        on left: 16
        on right: 5 12
    definicionVar (82)
        on left: 17
        on right: 13
    listaDefsTipo (83)
        on left: 18 19
        on right: 15 18
    defTipo (84)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 32 85 89 90 91
    expresionT (85)
        on left: 26 27
        on right: 21 23
    listaCampos (86)
        on left: 28 29
        on right: 20 28
    listaDefsConstantes (87)
        on left: 30 31
        on right: 16 30
    listaDefsVariables (88)
        on left: 32 33
        on right: 17 32 39 40 85
    listaId (89)
        on left: 34 35
        on right: 32 34 89 90 91
    defVariablesInteraccion (90)
        on left: 36 37 38
        on right: 2
    defEntrada (91)
        on left: 39
        on right: 36 37
    defSalida (92)
        on left: 40
        on right: 37 38
    expresion (93)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 43 44 45 46 47 48 49 50 52 53 54 57 58 59 60 61 62 65 74 75 76 80 81 83 94 95
    operando (94)
        on left: 63 64 65 66
        on right: 42 64 65 66 74
    instrucciones (95)
        on left: 67 68
        on right: 10 67 75 76 80 81
    instruccion (96)
        on left: 69 70 71 72 73
        on right: 67 68
    asignacion (97)
        on left: 74
        on right: 70
    alternativa (98)
        on left: 75
        on right: 71
    listaOpciones (99)
        on left: 76 77
        on right: 75 76
    iteracion (100)
        on left: 78 79
        on right: 72
    itCotaVariable (101)
        on left: 80
        on right: 79
    itCotaFija (102)
        on left: 81
        on right: 78
    defAccion (103)
        on left: 82
        on right: 7
    defFuncion (104)
        on left: 83
        on right: 8
    cabeceraAccion (105)
        on left: 84
        on right: 82
    cabeceraFuncion (106)
        on left: 85
        on right: 83
    defParForm (107)
        on left: 86 87 88
        on right: 84 86
    dParForm (108)
        on left: 89 90 91
        on right: 86 87
    llamadaAccion (109)
        on left: 92
        on right: 73
    llamadaFuncion (110)
        on left: 93
        on right: 41
    parametrosReales (111)
        on left: 94 95 96
        on right: 92 93 94


State 0

    0 $accept: . descAlgoritmo $end

    BT_ALGORITMO  shift, and go to state 1

    descAlgoritmo  go to state 2


State 1

    1 descAlgoritmo: BT_ALGORITMO . BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: descAlgoritmo . $end

    $end  shift, and go to state 4


State 3

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR . BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_COMPOSICIONSECUENCIAL  shift, and go to state 5


State 4

    0 $accept: descAlgoritmo $end .

    $default  accept


State 5

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL . cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    cabeceraAlgoritmo  go to state 8
    defGlobales        go to state 9
    definicionTipo     go to state 10
    definicionConst    go to state 11


State 6

   15 definicionTipo: BT_TIPO . listaDefsTipo BT_FTIPO

    BT_IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 19 (listaDefsTipo)

    listaDefsTipo  go to state 13


State 7

   16 definicionConst: BT_CONST . listaDefsConstantes BT_FCONST

    BT_IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 31 (listaDefsConstantes)

    listaDefsConstantes  go to state 15


State 8

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo . bloqueAlgoritmo BT_FALGORITMO

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloqueAlgoritmo  go to state 17
    bloque           go to state 18
    declaraciones    go to state 19
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 9

    2 cabeceraAlgoritmo: defGlobales . defAccionesFunciones defVariablesInteraccion BT_COMENTARIO

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 25
    defAccion             go to state 26
    defFuncion            go to state 27


State 10

    4 defGlobales: definicionTipo . defGlobales

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    defGlobales      go to state 28
    definicionTipo   go to state 10
    definicionConst  go to state 11


State 11

    5 defGlobales: definicionConst . defGlobales

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7

    $default  reduce using rule 6 (defGlobales)

    defGlobales      go to state 29
    definicionTipo   go to state 10
    definicionConst  go to state 11


State 12

   18 listaDefsTipo: BT_IDENTIFICADOR . BT_CREACIONTIPO defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo

    BT_CREACIONTIPO  shift, and go to state 30


State 13

   15 definicionTipo: BT_TIPO listaDefsTipo . BT_FTIPO

    BT_FTIPO  shift, and go to state 31


State 14

   30 listaDefsConstantes: BT_IDENTIFICADOR . BT_ASIGNACION BT_LITERAL BT_COMPOSICIONSECUENCIAL listaDefsConstantes

    BT_ASIGNACION  shift, and go to state 32


State 15

   16 definicionConst: BT_CONST listaDefsConstantes . BT_FCONST

    BT_FCONST  shift, and go to state 33


State 16

   17 definicionVar: BT_VAR . listaDefsVariables BT_FVAR

    BT_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (listaDefsVariables)

    listaDefsVariables  go to state 35
    listaId             go to state 36


State 17

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo . BT_FALGORITMO

    BT_FALGORITMO  shift, and go to state 37


State 18

    3 bloqueAlgoritmo: bloque . BT_COMENTARIO

    BT_COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones . instrucciones

    BT_IDENTIFICADOR  shift, and go to state 39
    BT_CONTINUAR      shift, and go to state 40
    BT_SI             shift, and go to state 41
    BT_MIENTRAS       shift, and go to state 42
    BT_PARA           shift, and go to state 43

    operando        go to state 44
    instrucciones   go to state 45
    instruccion     go to state 46
    asignacion      go to state 47
    alternativa     go to state 48
    iteracion       go to state 49
    itCotaVariable  go to state 50
    itCotaFija      go to state 51
    llamadaAccion   go to state 52


State 20

   11 declaraciones: definicionTipo . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 53
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 21

   12 declaraciones: definicionConst . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 54
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 22

   13 declaraciones: definicionVar . declaraciones

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones    go to state 55
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 23

   82 defAccion: BT_ACCION . cabeceraAccion bloque BT_FACCION

    BT_IDENTIFICADOR  shift, and go to state 56

    cabeceraAccion  go to state 57


State 24

   83 defFuncion: BT_FUNCION . cabeceraFuncion bloque BT_DEV expresion BT_FFUNCION

    BT_IDENTIFICADOR  shift, and go to state 58

    cabeceraFuncion  go to state 59


State 25

    2 cabeceraAlgoritmo: defGlobales defAccionesFunciones . defVariablesInteraccion BT_COMENTARIO

    BT_ENT  shift, and go to state 60
    BT_SAL  shift, and go to state 61

    defVariablesInteraccion  go to state 62
    defEntrada               go to state 63
    defSalida                go to state 64


State 26

    7 defAccionesFunciones: defAccion . defAccionesFunciones

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 65
    defAccion             go to state 26
    defFuncion            go to state 27


State 27

    8 defAccionesFunciones: defFuncion . defAccionesFunciones

    BT_ACCION   shift, and go to state 23
    BT_FUNCION  shift, and go to state 24

    $default  reduce using rule 9 (defAccionesFunciones)

    defAccionesFunciones  go to state 66
    defAccion             go to state 26
    defFuncion            go to state 27


State 28

    4 defGlobales: definicionTipo defGlobales .

    $default  reduce using rule 4 (defGlobales)


State 29

    5 defGlobales: definicionConst defGlobales .

    $default  reduce using rule 5 (defGlobales)


State 30

   18 listaDefsTipo: BT_IDENTIFICADOR BT_CREACIONTIPO . defTipo BT_COMPOSICIONSECUENCIAL listaDefsTipo

    BT_IDENTIFICADOR    shift, and go to state 67
    BT_TUPLA            shift, and go to state 68
    BT_TABLA            shift, and go to state 69
    BT_REF              shift, and go to state 70
    BT_TIPOBASE         shift, and go to state 71
    BT_LITERALENTERO    shift, and go to state 72
    BT_LITERALCARACTER  shift, and go to state 73

    defTipo     go to state 74
    expresionT  go to state 75


State 31

   15 definicionTipo: BT_TIPO listaDefsTipo BT_FTIPO .

    $default  reduce using rule 15 (definicionTipo)


State 32

   30 listaDefsConstantes: BT_IDENTIFICADOR BT_ASIGNACION . BT_LITERAL BT_COMPOSICIONSECUENCIAL listaDefsConstantes

    BT_LITERAL  shift, and go to state 76


State 33

   16 definicionConst: BT_CONST listaDefsConstantes BT_FCONST .

    $default  reduce using rule 16 (definicionConst)


State 34

   34 listaId: BT_IDENTIFICADOR . BT_SEPARADOR listaId
   35        | BT_IDENTIFICADOR .

    BT_SEPARADOR  shift, and go to state 77

    $default  reduce using rule 35 (listaId)


State 35

   17 definicionVar: BT_VAR listaDefsVariables . BT_FVAR

    BT_FVAR  shift, and go to state 78


State 36

   32 listaDefsVariables: listaId . BT_DEFINICIONTIPOVARIABLE defTipo BT_COMPOSICIONSECUENCIAL listaDefsVariables

    BT_DEFINICIONTIPOVARIABLE  shift, and go to state 79


State 37

    1 descAlgoritmo: BT_ALGORITMO BT_IDENTIFICADOR BT_COMPOSICIONSECUENCIAL cabeceraAlgoritmo bloqueAlgoritmo BT_FALGORITMO .

    $default  reduce using rule 1 (descAlgoritmo)


State 38

    3 bloqueAlgoritmo: bloque BT_COMENTARIO .

    $default  reduce using rule 3 (bloqueAlgoritmo)


State 39

   63 operando: BT_IDENTIFICADOR .
   92 llamadaAccion: BT_IDENTIFICADOR . BT_ASIGNACION BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

    BT_ASIGNACION  shift, and go to state 80

    BT_ASIGNACION  [reduce using rule 63 (operando)]
    $default       reduce using rule 63 (operando)


State 40

   69 instruccion: BT_CONTINUAR .

    $default  reduce using rule 69 (instruccion)


State 41

   75 alternativa: BT_SI . expresion BT_ENTONCES instrucciones listaOpciones BT_FSI

    BT_IDENTIFICADOR     shift, and go to state 81
    BT_VERDADERO         shift, and go to state 82
    BT_FALSO             shift, and go to state 83
    BT_LITERALNUMERICO   shift, and go to state 84
    BT_NO                shift, and go to state 85
    BT_RESTA             shift, and go to state 86
    BT_INICIOPARENTESIS  shift, and go to state 87

    expresion       go to state 88
    operando        go to state 89
    llamadaFuncion  go to state 90


State 42

   80 itCotaVariable: BT_MIENTRAS . expresion BT_HACER instrucciones BT_FMIENTRAS

    BT_IDENTIFICADOR     shift, and go to state 81
    BT_VERDADERO         shift, and go to state 82
    BT_FALSO             shift, and go to state 83
    BT_LITERALNUMERICO   shift, and go to state 84
    BT_NO                shift, and go to state 85
    BT_RESTA             shift, and go to state 86
    BT_INICIOPARENTESIS  shift, and go to state 87

    expresion       go to state 91
    operando        go to state 89
    llamadaFuncion  go to state 90


State 43

   81 itCotaFija: BT_PARA . BT_IDENTIFICADOR BT_ASIGNACION expresion BT_HASTA expresion BT_HACER instrucciones BT_FPARA

    BT_IDENTIFICADOR  shift, and go to state 92


State 44

   64 operando: operando . BT_PUNTO operando
   65         | operando . BT_INICIOARRAY expresion BT_FINARRAY
   66         | operando . BT_REF
   74 asignacion: operando . BT_ASIGNACION expresion

    BT_REF          shift, and go to state 93
    BT_PUNTO        shift, and go to state 94
    BT_ASIGNACION   shift, and go to state 95
    BT_INICIOARRAY  shift, and go to state 96


State 45

   10 bloque: declaraciones instrucciones .

    $default  reduce using rule 10 (bloque)


State 46

   67 instrucciones: instruccion . BT_COMPOSICIONSECUENCIAL instrucciones
   68              | instruccion .

    BT_COMPOSICIONSECUENCIAL  shift, and go to state 97

    $default  reduce using rule 68 (instrucciones)


State 47

   70 instruccion: asignacion .

    $default  reduce using rule 70 (instruccion)


State 48

   71 instruccion: alternativa .

    $default  reduce using rule 71 (instruccion)


State 49

   72 instruccion: iteracion .

    $default  reduce using rule 72 (instruccion)


State 50

   79 iteracion: itCotaVariable .

    $default  reduce using rule 79 (iteracion)


State 51

   78 iteracion: itCotaFija .

    $default  reduce using rule 78 (iteracion)


State 52

   73 instruccion: llamadaAccion .

    $default  reduce using rule 73 (instruccion)


State 53

   11 declaraciones: definicionTipo declaraciones .

    $default  reduce using rule 11 (declaraciones)


State 54

   12 declaraciones: definicionConst declaraciones .

    $default  reduce using rule 12 (declaraciones)


State 55

   13 declaraciones: definicionVar declaraciones .

    $default  reduce using rule 13 (declaraciones)


State 56

   84 cabeceraAccion: BT_IDENTIFICADOR . BT_INICIOPARENTESIS defParForm BT_FINPARENTESIS BT_COMPOSICIONSECUENCIAL

    BT_INICIOPARENTESIS  shift, and go to state 98


State 57

   82 defAccion: BT_ACCION cabeceraAccion . bloque BT_FACCION

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque           go to state 99
    declaraciones    go to state 19
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 58

   85 cabeceraFuncion: BT_IDENTIFICADOR . BT_INICIOPARENTESIS listaDefsVariables BT_FINPARENTESIS BT_DEV defTipo

    BT_INICIOPARENTESIS  shift, and go to state 100


State 59

   83 defFuncion: BT_FUNCION cabeceraFuncion . bloque BT_DEV expresion BT_FFUNCION

    BT_TIPO   shift, and go to state 6
    BT_CONST  shift, and go to state 7
    BT_VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque           go to state 101
    declaraciones    go to state 19
    definicionTipo   go to state 20
    definicionConst  go to state 21
    definicionVar    go to state 22


State 60

   39 defEntrada: BT_ENT . listaDefsVariables

    BT_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (listaDefsVariables)

    listaDefsVariables  go to state 102
    listaId             go to state 36


State 61

   40 defSalida: BT_SAL . listaDefsVariables

    BT_IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (listaDefsVariables)

    listaDefsVariables  go to state 103
    listaId             go to state 36


State 62

    2 cabeceraAlgoritmo: defGlobales defAccionesFunciones defVariablesInteraccion . BT_COMENTARIO

    BT_COMENTARIO  shift, and go to state 104


State 63

   36 defVariablesInteraccion: defEntrada .
   37                        | defEntrada . defSalida

    BT_SAL  shift, and go to state 61

    $default  reduce using rule 36 (defVariablesInteraccion)

    defSalida  go to state 105


State 64

   38 defVariablesInteraccion: defSalida .

    $default  reduce using rule 38 (defVariablesInteraccion)


State 65

    7 defAccionesFunciones: defAccion defAccionesFunciones .

    $default  reduce using rule 7 (defAccionesFunciones)


State 66

    8 defAccionesFunciones: defFuncion defAccionesFunciones .

    $default  reduce using rule 8 (defAccionesFunciones)


State 67

   22 defTipo: BT_IDENTIFICADOR .

    $default  reduce using rule 22 (defTipo)


State 68

   20 defTipo: BT_TUPLA . listaCampos BT_FTUPLA

    BT_IDENTIFICADOR  shift, and go to state 106

    $default  reduce using rule 29 (listaCampos)

    listaCampos  go to state 107


State 69

   21 defTipo: BT_TABLA . BT_INICIOARRAY expresionT BT_SUBRANGO expresionT BT_FINARRAY BT_DE defTipo

    BT_INICIOARRAY  shift, and go to state 108


State 70

   24 defTipo: BT_REF . defTipo

    BT_IDENTIFICADOR    shift, and go to state 67
    BT_TUPLA            shift, and go to state 68
    BT_TABLA            shift, and go to state 69
    BT_REF              shift, and go to state 70
    BT_TIPOBASE         shift, and go to state 71
    BT_LITERALENTERO    shift, and go to state 72
    BT_LITERALCARACTER  shift, and go to state 73

    defTipo     go to state 109
    expresionT  go to state 75


State 71

   25 defTipo: BT_TIPOBASE .

    $default  reduce using rule 25 (defTipo)


State 72

   26 expresionT: BT_LITERALENTERO .

    $default  reduce using rule 26 (expresionT)


State 73

   27 expresionT: BT_LITERALCARACTER .

    $default  reduce using rule 27 (expresionT)


State 74

   18 listaDefsTipo: BT_IDENTIFICADOR BT_CREACIONTIPO defTipo . BT_COMPOSICIONSECUENCIAL listaDefsTipo

    BT_COMPOSICIONSECUENCIAL  shift, and go to state 110


State 75

   23 defTipo: expresionT . BT_SUBRANGO expresionT

    BT_SUBRANGO  shift, and go to state 111


State 76

   30 listaDefsConstantes: BT_IDENTIFICADOR BT_ASIGNACION BT_LITERAL . BT_COMPOSICIONSECUENCIAL listaDefsConstantes

    BT_COMPOSICIONSECUENCIAL  shift, and go to state 112


State 77

   34 listaId: BT_IDENTIFICADOR BT_SEPARADOR . listaId

    BT_IDENTIFICADOR  shift, and go to state 34

    listaId  go to state 113


State 78

   17 definicionVar: BT_VAR listaDefsVariables BT_FVAR .

    $default  reduce using rule 17 (definicionVar)


State 79

   32 listaDefsVariables: listaId BT_DEFINICIONTIPOVARIABLE . defTipo BT_COMPOSICIONSECUENCIAL listaDefsVariables

    BT_IDENTIFICADOR    shift, and go to state 67
    BT_TUPLA            shift, and go to state 68
    BT_TABLA            shift, and go to state 69
    BT_REF              shift, and go to state 70
    BT_TIPOBASE         shift, and go to state 71
    BT_LITERALENTERO    shift, and go to state 72
    BT_LITERALCARACTER  shift, and go to state 73

    defTipo     go to state 114
    expresionT  go to state 75


State 80

   92 llamadaAccion: BT_IDENTIFICADOR BT_ASIGNACION . BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

    BT_INICIOPARENTESIS  shift, and go to state 115


State 81

   63 operando: BT_IDENTIFICADOR .
   93 llamadaFuncion: BT_IDENTIFICADOR . BT_ASIGNACION BT_INICIOPARENTESIS parametrosReales BT_FINPARENTESIS

    BT_ASIGNACION  shift, and go to state 116

    $default  reduce using rule 63 (operando)


State 82

   55 expresion: BT_VERDADERO .

    $default  reduce using rule 55 (expresion)


State 83

   56 expresion: BT_FALSO .

    $default  reduce using rule 56 (expresion)


State 84

   51 expresion: BT_LITERALNUMERICO .

    $default  reduce using rule 51 (expresion)


State 85

   54 expresion: BT_NO . expresion

    BT_IDENTIFICADOR     shift, and go to state 81
    BT_VERDADERO         shift, and go to state 82
    BT_FALSO             shift, and go to state 83
    BT_LITERALNUMERICO   shift, and go to state 84
    BT_NO                shift, and go to state 85
    BT_RESTA             shift, and go to state 86
    BT_INICIOPARENTESIS  shift, and go to state 87

    expresion       go to state 117
    operando        go to state 89
    llamadaFuncion  go to state 90


State 86

   50 expresion: BT_RESTA . expresion

    BT_IDENTIFICADOR     shift, and go to state 81
    BT_VERDADERO         shift, and go to state 82
    BT_FALSO             shift, and go to state 83
    BT_LITERALNUMERICO   shift, and go to state 84
    BT_NO                shift, and go to state 85
    BT_RESTA             shift, and go to state 86
    BT_INICIOPARENTESIS  shift, and go to state 87

    expresion       go to state 118
    operando        go to state 89
    llamadaFuncion  go to state 90


State 87

   49 expresion: BT_INICIOPARENTESIS . expresion BT_FINPARENTESIS

    BT_IDENTIFICADOR     shift, and go to state 81
    BT_VERDADERO         shift, and go to state 82
    BT_FALSO             shift, and go to state 83
    BT_LITERALNUMERICO   shift, and go to state 84
    BT_NO                shift, and go to state 85
    BT_RESTA             shift, and go to state 86
    BT_INICIOPARENTESIS  shift, and go to state 87

    expresion       go to state 119
    operando        go to state 89
    llamadaFuncion  go to state 90


State 88

   43 expresion: expresion . BT_SUMA expresion
   44          | expresion . BT_RESTA expresion
   45          | expresion . BT_MULTIPLICACION expresion
   46          | expresion . BT_DIVREAL expresion
   47          | expresion . BT_DIV expresion
   48          | expresion . BT_MOD expresion
   52          | expresion . BT_Y expresion
   53          | expresion . BT_O expresion
   57          | expresion . BT_MAYOR expresion
   58          | expresion . BT_MENOR expresion
   59          | expresion . BT_IGUAL expresion
   60          | expresion . BT_DISTINTO expresion
   61          | expresion . BT_MAYORIGUAL expresion
   62          | expresion . BT_MENORIGUAL expresion
   75 alternativa: BT_SI expresion . BT_ENTONCES instrucciones listaOpciones BT_FSI
